--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -1,21 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <Authors>Daniel Guiomarino</Authors>
-        <Company></Company>
+        <Company>Guiomarino Dev</Company>
         <Version>0.0.0.1</Version>
         <Description>A monster loot finder plugin.</Description>
         <Copyright>Daniel Guiomarino</Copyright>
-        <PackageProjectUrl></PackageProjectUrl>
-    </PropertyGroup>
-    <PropertyGroup>
+        <PackageProjectUrl>https://github.com/danielbrenom/MonsterLootHunter</PackageProjectUrl>
         <TargetFramework>net5.0-windows</TargetFramework>
         <Platforms>x64</Platforms>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <LangVersion>latest</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <OutputPath>$(AppData)\XIVLauncher\devPlugins\MonsterLootHunter\</OutputPath>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <FileVersion>1.0.0</FileVersion>
     </PropertyGroup>
     <ItemGroup>
         <Content Include="..\Data\monsterLootHunter.json">
@@ -27,6 +28,8 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="DalamudPackager" Version="2.1.5" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.39" />
+        <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
         <Reference Include="FFXIVClientStructs">
             <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
             <Private>false</Private>
