--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <Authors>Daniel Guiomarino</Authors>
         <Company>Guiomarino Dev</Company>
-        <Version>0.0.0.1</Version>
+        <Version>0.0.0.2</Version>
         <Description>A monster loot finder plugin.</Description>
         <Copyright>Daniel Guiomarino</Copyright>
         <PackageProjectUrl>https://github.com/danielbrenom/MonsterLootHunter</PackageProjectUrl>
@@ -18,18 +18,14 @@
         <AssemblyVersion>1.0.0</AssemblyVersion>
         <FileVersion>1.0.0</FileVersion>
     </PropertyGroup>
-    <ItemGroup>
-        <Content Include="..\Data\monsterLootHunter.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-    </ItemGroup>
     <PropertyGroup>
         <DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="2.1.5" />
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.39" />
+        <PackageReference Include="DalamudPackager" Version="2.1.7" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
         <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
+        <PackageReference Include="XivCommon" Version="5.0.1-alpha.1" />
         <Reference Include="FFXIVClientStructs">
             <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
             <Private>false</Private>
@@ -59,5 +55,7 @@
             <Private>false</Private>
         </Reference>
     </ItemGroup>
-
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <Exec Command="if $(Configuration) == Release powershell Compress-Archive -Force $(TargetDir)* $(SolutionDir)$(SolutionName).zip" />
+    </Target>
 </Project>
