--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -2,11 +2,11 @@
     <PropertyGroup>
         <Authors>Daniel Guiomarino</Authors>
         <Company>Guiomarino Dev</Company>
-        <Version>0.0.0.2</Version>
+        <Version>0.0.0.3</Version>
         <Description>A monster loot finder plugin.</Description>
         <Copyright>Daniel Guiomarino</Copyright>
         <PackageProjectUrl>https://github.com/danielbrenom/MonsterLootHunter</PackageProjectUrl>
-        <TargetFramework>net5.0-windows</TargetFramework>
+        <TargetFramework>net6.0-windows</TargetFramework>
         <Platforms>x64</Platforms>
         <Nullable>disable</Nullable>
         <LangVersion>latest</LangVersion>
@@ -14,18 +14,24 @@
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <OutputPath>$(AppData)\XIVLauncher\devPlugins\MonsterLootHunter\</OutputPath>
-        <AssemblyVersion>1.0.0</AssemblyVersion>
-        <FileVersion>1.0.0</FileVersion>
+        <AssemblyVersion>1.0.3</AssemblyVersion>
+        <FileVersion>1.0.3</FileVersion>
+        <PackageVersion>0.0.3</PackageVersion>
     </PropertyGroup>
     <PropertyGroup>
         <DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
     </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
+      <OutputPath>bin\Debug</OutputPath>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
+      <OutputPath>bin\Release</OutputPath>
+    </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="2.1.7" />
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
+        <PackageReference Include="DalamudPackager" Version="2.1.8" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
         <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
-        <PackageReference Include="XivCommon" Version="5.0.1-alpha.1" />
+        <PackageReference Include="XivCommon" Version="6.0.2" />
         <Reference Include="FFXIVClientStructs">
             <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
             <Private>false</Private>
@@ -60,7 +66,7 @@
         <Link>repo.json</Link>
       </Content>
     </ItemGroup>
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Exec Command="if $(Configuration) == Release powershell Compress-Archive -Force $(TargetDir)* $(SolutionDir)$(SolutionName).zip" />
-    </Target>
+<!--    <Target Name="PostBuild" AfterTargets="PostBuildEvent">-->
+<!--        <Exec Command="if $(Configuration) == Release powershell Compress-Archive -Force $(TargetDir)* $(SolutionDir)$(SolutionName).zip" />-->
+<!--    </Target>-->
 </Project>
