--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -2,21 +2,22 @@
     <PropertyGroup>
         <Authors>Sylf</Authors>
         <Company>Guiomarino Dev</Company>
-        <Version>1.0.13.2</Version>
+        <Version>1.0.14.2</Version>
         <Description>A monster loot finder plugin.</Description>
         <Copyright>Daniel Guiomarino</Copyright>
         <PackageProjectUrl>https://github.com/danielbrenom/MonsterLootHunter</PackageProjectUrl>
         <TargetFramework>net7.0-windows</TargetFramework>
         <Platforms>x64</Platforms>
+        <PlatformTarget>x64</PlatformTarget>
         <Nullable>disable</Nullable>
         <LangVersion>latest</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <AssemblyVersion>1.0.13.2</AssemblyVersion>
-        <FileVersion>1.0.13.2</FileVersion>
-        <PackageVersion>1.0.13.2</PackageVersion>
+        <AssemblyVersion>1.0.14.2</AssemblyVersion>
+        <FileVersion>1.0.14.2</FileVersion>
+        <PackageVersion>1.0.14.2</PackageVersion>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
     <PropertyGroup>
@@ -26,17 +27,17 @@
         <DalamudLibPath>$(DALAMUD_HOME)/</DalamudLibPath>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
-      <OutputPath>bin\Debug</OutputPath>
+        <OutputPath>bin\Debug</OutputPath>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
-      <OutputPath>bin\Release</OutputPath>
+        <OutputPath>bin\Release</OutputPath>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Dalamud.ContextMenu" Version="1.2.1" />
-        <PackageReference Include="DalamudPackager" Version="2.1.10" />
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
-        <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
-        <PackageReference Include="XivCommon" Version="7.0.0-alpha.1" />
+        <PackageReference Include="Dalamud.ContextMenu" Version="1.2.1"/>
+        <PackageReference Include="DalamudPackager" Version="2.1.10"/>
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.46"/>
+        <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1"/>
+        <PackageReference Include="XivCommon" Version="7.0.0-alpha.1"/>
         <Reference Include="FFXIVClientStructs">
             <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
             <Private>false</Private>
