--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <Authors>Sylf</Authors>
         <Company>Guiomarino Dev</Company>
-        <Version>1.0.18.4</Version>
+        <Version>1.0.19.4</Version>
         <Description>A monster loot finder plugin.</Description>
         <Copyright>Daniel Guiomarino</Copyright>
         <PackageProjectUrl>https://github.com/danielbrenom/MonsterLootHunter</PackageProjectUrl>
@@ -15,10 +15,11 @@
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <AssemblyVersion>1.0.18.4</AssemblyVersion>
-        <FileVersion>1.0.18.4</FileVersion>
-        <PackageVersion>1.0.18.4</PackageVersion>
+        <AssemblyVersion>1.0.19.4</AssemblyVersion>
+        <FileVersion>1.0.19.4</FileVersion>
+        <PackageVersion>1.0.19.4</PackageVersion>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+        <ImplicitUsings>true</ImplicitUsings>
     </PropertyGroup>
     <PropertyGroup>
         <DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
