--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -2,11 +2,12 @@
     <PropertyGroup>
         <Authors>Sylf</Authors>
         <Company>Guiomarino Dev</Company>
-        <Version>1.0.20.5</Version>
+        <Version>1.1.20.5</Version>
         <Description>A monster loot finder plugin.</Description>
         <Copyright>Daniel Guiomarino</Copyright>
         <PackageProjectUrl>https://github.com/danielbrenom/MonsterLootHunter</PackageProjectUrl>
-        <TargetFramework>net7.0-windows</TargetFramework>
+        <RepositoryUrl>https://github.com/danielbrenom/MonsterLootHunter</RepositoryUrl>
+        <TargetFramework>net8.0-windows</TargetFramework>
         <Platforms>x64</Platforms>
         <PlatformTarget>x64</PlatformTarget>
         <Nullable>enable</Nullable>
@@ -15,9 +16,9 @@
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <AssemblyVersion>1.0.20.5</AssemblyVersion>
-        <FileVersion>1.0.20.5</FileVersion>
-        <PackageVersion>1.0.20.5</PackageVersion>
+        <AssemblyVersion>1.1.20.5</AssemblyVersion>
+        <FileVersion>1.1.20.5</FileVersion>
+        <PackageVersion>1.1.20.5</PackageVersion>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <ImplicitUsings>true</ImplicitUsings>
     </PropertyGroup>
@@ -34,7 +35,6 @@
         <OutputPath>bin\Release</OutputPath>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Dalamud.ContextMenu" Version="1.3.1" />
         <PackageReference Include="DalamudPackager" Version="2.1.12" />
         <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
         <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
