--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -1,33 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Dalamud.NET.Sdk/9.0.2">
     <PropertyGroup>
         <Authors>Sylf</Authors>
         <Company>Guiomarino Dev</Company>
-        <Version>1.1.21.5</Version>
+        <Version>1.2.21.5</Version>
         <Description>A monster loot finder plugin.</Description>
         <Copyright>Daniel Guiomarino</Copyright>
         <PackageProjectUrl>https://github.com/danielbrenom/MonsterLootHunter</PackageProjectUrl>
         <RepositoryUrl>https://github.com/danielbrenom/MonsterLootHunter</RepositoryUrl>
-        <TargetFramework>net8.0-windows</TargetFramework>
-        <Platforms>x64</Platforms>
-        <PlatformTarget>x64</PlatformTarget>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <AssemblyVersion>1.1.21.5</AssemblyVersion>
-        <FileVersion>1.1.21.5</FileVersion>
-        <PackageVersion>1.1.21.5</PackageVersion>
+        <AssemblyVersion>1.2.21.5</AssemblyVersion>
+        <FileVersion>1.2.21.5</FileVersion>
+        <PackageVersion>1.2.21.5</PackageVersion>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <ImplicitUsings>true</ImplicitUsings>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
-    <PropertyGroup>
-        <DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>        
-    </PropertyGroup>
-    <PropertyGroup Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">
-        <DalamudLibPath>$(DALAMUD_HOME)/</DalamudLibPath>
-    </PropertyGroup>
+    <ItemGroup>
+        <Content Include="..\MonsterLootHunter\images\icon.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <Visible>false</Visible>
+        </Content>
+    </ItemGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
         <OutputPath>bin\Debug</OutputPath>
     </PropertyGroup>
@@ -35,37 +33,16 @@
         <OutputPath>bin\Release</OutputPath>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="2.1.13" />
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
-        <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
-        <PackageReference Include="XivCommon" Version="9.0.0" />
-        <Reference Include="FFXIVClientStructs">
-            <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Newtonsoft.Json">
-            <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Dalamud">
-            <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="ImGui.NET">
-            <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="ImGuiScene">
-            <HintPath>$(DalamudLibPath)ImGuiScene.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Lumina">
-            <HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Lumina.Excel">
-            <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.54"/>
+        <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1"/>
+        <PackageReference Include="XivCommon" Version="9.0.0"/>
+    </ItemGroup>
+    <ItemGroup>
+      <Compile Update="Data\Gatherable\GatheringNode.Items.cs">
+        <DependentUpon>GatheringNode.cs</DependentUpon>
+      </Compile>
+      <Compile Update="Data\Gatherable\GatheringNode.Location.cs">
+        <DependentUpon>GatheringNode.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 </Project>
