--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -1,4 +1,5 @@
-<Project Sdk="Dalamud.NET.Sdk/11.0.0">
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Dalamud.NET.Sdk/12.0.2">
     <PropertyGroup>
         <Authors>Sylf</Authors>
         <Company>Guiomarino Dev</Company>
@@ -33,9 +34,9 @@
         <OutputPath>bin\Release</OutputPath>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.54"/>
-        <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1"/>
-        <PackageReference Include="XivCommon" Version="9.0.0"/>
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.74" />
+        <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
+        <PackageReference Include="XivCommon" Version="9.0.0" />
     </ItemGroup>
     <ItemGroup>
       <Compile Update="Data\Gatherable\GatheringNode.Items.cs">
