--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Dalamud.NET.Sdk/13.0.0">
+<Project Sdk="Dalamud.NET.Sdk/14.0.1">
     <PropertyGroup>
         <Authors>Sylf</Authors>
         <Company>Guiomarino Dev</Company>
-        <Version>1.4.24.7</Version>
+        <Version>1.5.24.7</Version>
         <Description>A monster loot finder plugin.</Description>
         <Copyright>Daniel Guiomarino</Copyright>
         <PackageProjectUrl>https://github.com/danielbrenom/MonsterLootHunter</PackageProjectUrl>
@@ -14,9 +14,9 @@
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <AssemblyVersion>1.4.24.7</AssemblyVersion>
-        <FileVersion>1.4.24.7</FileVersion>
-        <PackageVersion>1.4.24.7</PackageVersion>
+        <AssemblyVersion>1.5.24.7</AssemblyVersion>
+        <FileVersion>1.5.24.7</FileVersion>
+        <PackageVersion>1.5.24.7</PackageVersion>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <ImplicitUsings>true</ImplicitUsings>
         <IsPackable>false</IsPackable>
@@ -34,9 +34,10 @@
         <OutputPath>bin\Release</OutputPath>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.74" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
         <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
         <PackageReference Include="XivCommon" Version="9.0.0" />
+        <PackageReference Update="DalamudPackager" Version="14.0.1" />
     </ItemGroup>
     <ItemGroup>
       <Compile Update="Data\Gatherable\GatheringNode.Items.cs">
